--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ video {
 		<title>Tommy Cam Time-Lapse</title>
 	</head>
 	<body>
-		<video id="video" src="tomlapse.mp4" poster="tomlapse.jpg" autoplay loop muted playsinline></video>
+		<video id="video" src="tomlapse.mp4" autoplay loop muted playsinline></video>
 		<script>
 let video = document.getElementById("video");
 
